fix: overflow hidden on option wrapper to preserve rounded corners

--- a/src/components/inputs/Combobox/Combobox.scss
+++ b/src/components/inputs/Combobox/Combobox.scss
@@ -111,6 +111,7 @@
 	}
 
 	.Combobox_Options {
+		overflow: hidden;
 		position: absolute;
 		top: calc(var(--inputHeight) + 1px);
 		left: 0;
